Fix header size on small devices

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -24,7 +24,7 @@ body {
     color: #e0a240;
 
     @media(max-width: $screen-xs-max) {
-      font-size: 2.5em;
+      font-size: 2em;
     }
   }
 
